# flake

./: .gitignore  README.md  flake.nix
nix/: formatting.nix
templates/default/: flake.nix
templates/default/nix/: formatting.nix
templates/python/: README.md  flake.nix  pyproject.toml
templates/python/nix/: formatting.nix  uv-workspace.nix  uv2nix.nix
templates/python/src/py_template/: cli.py  cli_test.py
